# SlicerScreenCapture

./: CMakeLists.txt  README.md
ScreenCapture/: ScreenCapture.py
